# PredictProtein1_solubility

./: .gitignore  README.md  pyproject.toml
Data/: NESG_testset_formatted.csv  PSI_Biology_solubility_trainset.csv  PSI_trainset_mini.csv  train_embedds_pp_mini.h5
Data_preparation/: create_prott5_embedds.py  embeeeings.ipynb  mess.py
Model_training/: NESG_Dataset.py  NetSolp_Dataset.py  constants.py  train_model.py
Model_training/models/: LightAttentionModel.py  LoRA.py  base_model.py  fine_tune.py  lin_models.py  test_lora_modification.py
Model_training/utils/: collate_functions.py  constants.py  metrics.py
bash_scripts/: fine_tune_t5.sh
bsub_configs/: bsub_attention.yml  bsub_finetunelora.yml  bsub_finetunet5.yml  bsub_oneLayerLinear.yml  bsub_testmodel.yml  bsub_threeLayerLinear128x64.yml  bsub_twoLayerLinear128.yml  bsub_twoLayerLinear256.yml  bsub_twoLayerLinear512.yml  bsub_twoLayerLinear64.yml
plotting/: plotting_metrics.py  plotting_metrics_linear_comparison.py
